--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -1104,14 +1104,14 @@
                         <outlet property="popupView" destination="zWm-5I-Tvi" id="nRS-Or-Nvc"/>
                         <outlet property="scrollContentView" destination="sr0-0f-ucm" id="2Vr-hU-4g8"/>
                         <outlet property="submitButton" destination="oFa-sn-dv8" id="shV-fb-h6v"/>
-                        <outletCollection property="settingValues" destination="bkW-D2-kyF" collectionClass="NSMutableArray" id="6YR-cS-Y8F"/>
-                        <outletCollection property="settingValues" destination="D0E-c9-HmT" collectionClass="NSMutableArray" id="dBQ-3Z-ezE"/>
-                        <outletCollection property="settingValues" destination="fRu-lf-mGO" collectionClass="NSMutableArray" id="9L5-Ud-H3m"/>
-                        <outletCollection property="settingSteppers" destination="5gj-fS-e1N" collectionClass="NSMutableArray" id="7th-R8-rGB"/>
-                        <outletCollection property="settingSteppers" destination="cIX-Vy-Lh7" collectionClass="NSMutableArray" id="zFM-z1-5La"/>
-                        <outletCollection property="settingSteppers" destination="Yqz-Ed-DiB" collectionClass="NSMutableArray" id="TN6-1e-a45"/>
-                        <outletCollection property="settingSteppers" destination="w0s-0e-blw" collectionClass="NSMutableArray" id="4xT-Oh-Cga"/>
-                        <outletCollection property="settingValues" destination="tzj-YP-XCu" collectionClass="NSMutableArray" id="xE1-RS-hbG"/>
+                        <outletCollection property="settingValues" destination="fRu-lf-mGO" collectionClass="NSMutableArray" id="X6H-UQ-gga"/>
+                        <outletCollection property="settingValues" destination="bkW-D2-kyF" collectionClass="NSMutableArray" id="iQS-43-iHJ"/>
+                        <outletCollection property="settingValues" destination="D0E-c9-HmT" collectionClass="NSMutableArray" id="sbh-tP-2FH"/>
+                        <outletCollection property="settingValues" destination="tzj-YP-XCu" collectionClass="NSMutableArray" id="8W3-6y-S2X"/>
+                        <outletCollection property="settingSteppers" destination="w0s-0e-blw" collectionClass="NSMutableArray" id="FgE-q7-fUl"/>
+                        <outletCollection property="settingSteppers" destination="5gj-fS-e1N" collectionClass="NSMutableArray" id="rIq-GR-nxk"/>
+                        <outletCollection property="settingSteppers" destination="cIX-Vy-Lh7" collectionClass="NSMutableArray" id="RnZ-5a-OdZ"/>
+                        <outletCollection property="settingSteppers" destination="Yqz-Ed-DiB" collectionClass="NSMutableArray" id="Vaf-Q3-HCg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fI-9r-0wi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1279,9 +1279,9 @@
                                 <rect key="frame" x="148" y="57" width="600" height="300"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lkd-YW-Xu8">
-                                        <rect key="frame" x="0.0" y="30" width="600" height="220"/>
+                                        <rect key="frame" x="40" y="50" width="520" height="200"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m8t-HY-Bdp">
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m8t-HY-Bdp">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -1296,24 +1296,24 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5yS-wE-dJY">
-                                                            <rect key="frame" x="19" y="0.0" width="91" height="84"/>
+                                                            <rect key="frame" x="20" y="20" width="88" height="88"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="5yS-wE-dJY" secondAttribute="height" id="kjT-Eq-PPH"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0oO-4C-nDw">
-                                                            <rect key="frame" x="43" y="99" width="42" height="21"/>
+                                                            <rect key="frame" x="43" y="10" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="0oO-4C-nDw" secondAttribute="bottom" constant="8" id="6Io-at-GS4"/>
-                                                        <constraint firstItem="0oO-4C-nDw" firstAttribute="top" secondItem="5yS-wE-dJY" secondAttribute="bottom" constant="15" id="DTo-Ae-do2"/>
-                                                        <constraint firstItem="5yS-wE-dJY" firstAttribute="top" secondItem="gcI-1u-Uim" secondAttribute="top" id="KQ6-kw-HuF"/>
-                                                        <constraint firstItem="0oO-4C-nDw" firstAttribute="top" secondItem="5yS-wE-dJY" secondAttribute="bottom" constant="15" id="L0Z-cw-QNa"/>
-                                                        <constraint firstItem="0oO-4C-nDw" firstAttribute="leading" secondItem="gcI-1u-Uim" secondAttribute="leading" constant="43" id="YZv-2e-v6v"/>
-                                                        <constraint firstItem="5yS-wE-dJY" firstAttribute="leading" secondItem="gcI-1u-Uim" secondAttribute="leading" constant="19" id="aKI-JF-wJa"/>
-                                                        <constraint firstAttribute="trailing" secondItem="0oO-4C-nDw" secondAttribute="trailing" constant="43" id="bRC-ih-a1U"/>
-                                                        <constraint firstAttribute="trailing" secondItem="5yS-wE-dJY" secondAttribute="trailing" constant="18" id="zFD-HH-EgO"/>
+                                                        <constraint firstItem="5yS-wE-dJY" firstAttribute="centerX" secondItem="gcI-1u-Uim" secondAttribute="centerX" id="GZ7-Pw-VE7"/>
+                                                        <constraint firstItem="5yS-wE-dJY" firstAttribute="top" secondItem="gcI-1u-Uim" secondAttribute="top" constant="20" id="KQ6-kw-HuF"/>
+                                                        <constraint firstItem="5yS-wE-dJY" firstAttribute="leading" secondItem="gcI-1u-Uim" secondAttribute="leading" constant="20" id="aV1-f1-obJ"/>
+                                                        <constraint firstItem="0oO-4C-nDw" firstAttribute="centerX" secondItem="gcI-1u-Uim" secondAttribute="centerX" id="xCI-A1-v9y"/>
+                                                        <constraint firstItem="0oO-4C-nDw" firstAttribute="top" secondItem="gcI-1u-Uim" secondAttribute="top" constant="10" id="zXe-v7-qsy"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <connections>
@@ -1327,19 +1327,8 @@
                                             <outlet property="delegate" destination="Kz6-53-fNS" id="MI6-bt-VLY"/>
                                         </connections>
                                     </collectionView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50V-Iu-RJd">
-                                        <rect key="frame" x="512" y="260" width="48" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="jMI-fa-A24"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                        <state key="normal" title="Select"/>
-                                        <connections>
-                                            <action selector="selectButton:" destination="Kz6-53-fNS" eventType="touchUpInside" id="o26-Vy-tOr"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWf-83-zqF">
-                                        <rect key="frame" x="40" y="260" width="53" height="30"/>
+                                        <rect key="frame" x="40" y="10" width="53" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="H2m-Hi-hld"/>
                                         </constraints>
@@ -1350,8 +1339,8 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipI-wS-MVf">
-                                        <rect key="frame" x="255" y="10" width="90" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="237.5" y="10" width="125.5" height="26"/>
+                                        <fontDescription key="fontDescription" name="Gaegu-Bold" family="Gaegu" pointSize="26"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -1361,16 +1350,13 @@
                                     <constraint firstAttribute="width" constant="600" id="0on-Q5-3XU"/>
                                     <constraint firstAttribute="bottom" secondItem="lkd-YW-Xu8" secondAttribute="bottom" constant="50" id="7Gh-t3-HpL"/>
                                     <constraint firstItem="ipI-wS-MVf" firstAttribute="centerX" secondItem="X5k-Ek-2Ou" secondAttribute="centerX" id="9qd-6V-hkK"/>
-                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="leading" secondItem="X5k-Ek-2Ou" secondAttribute="leading" id="AwP-3D-002"/>
-                                    <constraint firstAttribute="bottom" secondItem="50V-Iu-RJd" secondAttribute="bottom" constant="10" id="En3-nD-yE2"/>
-                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="top" secondItem="X5k-Ek-2Ou" secondAttribute="top" constant="30" id="GZk-oK-Uo9"/>
-                                    <constraint firstAttribute="trailing" secondItem="50V-Iu-RJd" secondAttribute="trailing" constant="40" id="PFb-oX-lKG"/>
+                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="leading" secondItem="X5k-Ek-2Ou" secondAttribute="leading" constant="40" id="AwP-3D-002"/>
+                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="top" secondItem="X5k-Ek-2Ou" secondAttribute="top" constant="50" id="GZk-oK-Uo9"/>
                                     <constraint firstAttribute="height" constant="300" id="QJZ-RW-IsE"/>
                                     <constraint firstItem="ipI-wS-MVf" firstAttribute="top" secondItem="X5k-Ek-2Ou" secondAttribute="top" constant="10" id="Spv-vC-Xgx"/>
+                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="centerX" secondItem="X5k-Ek-2Ou" secondAttribute="centerX" id="ZXC-iI-wE8"/>
                                     <constraint firstItem="qWf-83-zqF" firstAttribute="leading" secondItem="X5k-Ek-2Ou" secondAttribute="leading" constant="40" id="eyr-GW-FDJ"/>
-                                    <constraint firstItem="lkd-YW-Xu8" firstAttribute="centerX" secondItem="X5k-Ek-2Ou" secondAttribute="centerX" id="fBg-VX-sg4"/>
-                                    <constraint firstAttribute="trailing" secondItem="lkd-YW-Xu8" secondAttribute="trailing" id="m1K-ZT-EaS"/>
-                                    <constraint firstAttribute="bottom" secondItem="qWf-83-zqF" secondAttribute="bottom" constant="10" id="mdl-e3-ccp"/>
+                                    <constraint firstItem="qWf-83-zqF" firstAttribute="top" secondItem="X5k-Ek-2Ou" secondAttribute="top" constant="10" id="iNI-ns-cvs"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1385,7 +1371,7 @@
                         <outlet property="bgView" destination="X5k-Ek-2Ou" id="nks-s9-tNo"/>
                         <outlet property="cancelButton" destination="qWf-83-zqF" id="1WH-jH-0wC"/>
                         <outlet property="collectionView" destination="lkd-YW-Xu8" id="734-9Y-Cy8"/>
-                        <outlet property="selectButton" destination="50V-Iu-RJd" id="DLy-B8-yTd"/>
+                        <outlet property="header" destination="ipI-wS-MVf" id="7vT-6e-Zae"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bwu-wx-P63" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1415,8 +1401,11 @@
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="earn label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7b-6I-pRX">
-                                        <rect key="frame" x="208.5" y="140" width="83.5" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7b-6I-pRX">
+                                        <rect key="frame" x="100" y="140" width="300" height="0.0"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="KGa-91-Yki"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
